--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "lint": "eslint .",
     "format": "prettier --write .",
     "debug": "netlify dev --inspect"
   },
@@ -18,6 +19,14 @@
   },
   "devDependencies": {
     "prettier": "^3.6.2",
-    "@trivago/prettier-plugin-sort-imports": "5.2.2"
+    "@trivago/prettier-plugin-sort-imports": "5.2.2",
+    "eslint": "^9.30.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^15.11.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
