--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ env:
   DOCKER_DRIVER: overlay
 
 jobs:
-  build-frontend:
+  build-backend:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
