Update ARPS event handlers
- Update arps to be more meaningful and readable. There was a couple of instances
where the conditionals were not working as expected, so added some cleanup there.

- Added launch.json scripts for dev use

closes #17

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,9 @@ web_modules/
 # Optional npm cache directory
 .npm
 
+# deno
+deno.lock
+
 # package-lock.json file to prevent local dev build issues.
 package-lock.json
 
